subiendo sprint 6(fase 6)

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -66,9 +66,6 @@
   list-style-type: none;
   padding: 0;
   margin-top: 10px;
-  list-style-type: none;
-  padding: 0;
-  margin-top: 10px;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
@@ -91,4 +88,25 @@
   border-radius: 50%;
   padding: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Botón de favorito */
+.favorite-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  color: var(--tea-green);
+  font-size: 24px;
+  cursor: pointer;
+  transition: color 0.3s, transform 0.2s;
+}
+
+.favorite-button:hover {
+  transform: scale(1.1);
+}
+
+.favorite-active .material-symbols-outlined {
+  color: var(--buff);
 }
